The Great Command Migration (#559)
Remove old mention commands in favor of slash commands due to future Discord changes.

o7